# Rk2

./: CMakeCache.txt  CMakeLists.txt  Decorator.cpp  Makefile  cmake_install.cmake  component.h  concrete_component.h  concrete_decorator_a.h  concrete_decorator_b.h  decorator.h  main.cpp  test.cpp  test_decorator.cpp
.github/workflows/: build.yml  main.yml
decorator/: ParticleFactory_test.cpp
demo/: main.cpp
github/workflows/: check.yml
src/: main.cpp
tests/: decorator_test.cpp  test_decorator.cpp  test_facade.cpp
